# fastapi-binance

./: README.md
fastApiProject/: Dockerfile  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements  start.sh
fastApiProject/alembic/: env.py
fastApiProject/alembic/versions/: ccbe226b126c_.py  db387fd514dd_.py
fastApiProject/core/: cache.py  database.py  logs.py
fastApiProject/db/: base.py
fastApiProject/models/: models.py
fastApiProject/p_models/: cources.py  pair.py
fastApiProject/routers/exchange/: exchange.py  helper.py  queries.py  tasks.py
fastApiProject/services/: get_url.py  ws_bin.py
fastApiProject/tasks/: save_to_db.py
